minor style issue

--- a/application/templates/layout.html.twig
+++ b/application/templates/layout.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
 {% block content %}
-    {% block title %}<h1 class="h1 text-center">Cryptography toolbox</h1>{% endblock %}
+    <h1 class="h1 text-center">Cryptography toolbox</h1>
     {% block page_contents %}{% endblock %}
 {% endblock %}
