--- a/application/templates/ciphers/substitution.html.twig
+++ b/application/templates/ciphers/substitution.html.twig
@@ -22,6 +22,17 @@
             <div class="col-md-8">
                 <div class="card text-dark bg-light mb-3 border-dark">
                     <div class="card-header">
+                        Letters Frequency
+                    </div>
+                    <div class="card-body">
+                        <div class="mb-3">
+                            <div class="mb-3" id="letters-frequency-chart">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card text-dark bg-light mb-3 border-dark">
+                    <div class="card-header">
                         Results
                     </div>
                     <div class="card-body">
