--- a/application/templates/layout.html.twig
+++ b/application/templates/layout.html.twig
@@ -1,6 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block content %}
-    <h1 class="h1 text-center">Cryptography toolbox</h1>
-    {% block page_contents %}{% endblock %}
+    <div class="container-fluid">
+        <h1 class="h1 text-center">Cryptography toolbox</h1>
+        {% block page_contents %}{% endblock %}
+    </div>
 {% endblock %}
