--- a/application/templates/ciphers/substitution.html.twig
+++ b/application/templates/ciphers/substitution.html.twig
@@ -38,7 +38,7 @@
                     <div class="card-body">
                         <div class="mb-3">
                             <div class="" id="longest-word-results-ta">
-                                <table id="words-table" class="table table-primary table-striped">
+                                <table id="words-table" class="table table-primary table-striped table-hover">
                                     <thead>
                                     <tr>
                                         <th>Word</th>
@@ -60,11 +60,12 @@
                     <div class="card-body">
                         <div class="mb-3">
                             <div class="" id="matches-results-ta">
-                                <table id="matches-table" class="table table-success table-striped">
+                                <table id="matches-table" class="table table-success table-striped table-hover">
                                     <thead>
                                     <tr>
                                         <th>Pattern</th>
-                                        <th>Word</th>
+                                        <th>Dictionary Word</th>
+                                        <th>Substitution using dictionary word</th>
                                     </tr>
                                     </thead>
                                     <tbody id="matches-table-content">
