--- a/application/templates/ciphers/substitution.html.twig
+++ b/application/templates/ciphers/substitution.html.twig
@@ -6,11 +6,10 @@
             <div class="col-md-4">
                 <div class="card text-dark bg-light mb-3 border-dark">
                     <div class="card-header">
-                        Longest word finder
+                        Cipher Text
                     </div>
                     <div class="card-body">
                         <div class="mb-3">
-                            <label for="text-cipher" class="form-label">Text to check</label>
                             <textarea class="form-control textarea pb-2" id="text-cipher"
                                       aria-describedby="text-cipher-Help" rows="10"></textarea>
                             <div id="text-cipher-Help" class="form-text">Copy the text to check here</div>
@@ -21,19 +20,6 @@
             </div>
             <div class="col-md-8">
                 {% include 'partials/letterFrequency.html.twig' %}
-                <!--
-                <div class="card text-dark bg-light mb-3 border-dark">
-                    <div class="card-header">
-                        Letters Frequency
-                    </div>
-                    <div class="card-body">
-                        <div class="mb-3">
-                            <div class="mb-3" id="letters-frequency-chart">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                -->
                 <div class="card text-dark bg-light mb-3 border-dark">
                     <div class="card-header">
                         Results
