--- a/application/templates/layout.html.twig
+++ b/application/templates/layout.html.twig
@@ -3,6 +3,7 @@
 {% block content %}
     <div class="container-fluid">
         <h1 class="h1 text-center">Cryptography toolbox</h1>
+        {% include ('partials/top-menu.html.twig') %}
         {% block page_contents %}{% endblock %}
     </div>
 {% endblock %}
