--- a/application/templates/partials/top-menu.html.twig
+++ b/application/templates/partials/top-menu.html.twig
@@ -7,9 +7,10 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link {{ home_active }}" aria-current="page" href="/">Home</a>
-                    <a class="nav-link {{ caesar_active }}" href="/ciphers/caesar">Caesar (TBD)</a>
-                    <a class="nav-link {{ substitution_active }}" href="/ciphers/substitution">Substitution</a>
-                    <a class="nav-link {{ transposition_active }}" href="/ciphers/transposition">Transposition (TBD)</a>
+                    <a class="nav-link {{ caesar_active }}" href="/ciphers/caesar">Caesar Cipher</a>
+                    <a class="nav-link {{ substitution_active }}" href="/ciphers/substitution">Substitution Cipher</a>
+                    <a class="nav-link {{ transposition_active }}" href="/ciphers/transposition">Transposition Cipher
+                        (TBD)</a>
                 </div>
             </div>
         </div>
