--- a/application/templates/ciphers/transposition.html.twig
+++ b/application/templates/ciphers/transposition.html.twig
@@ -23,5 +23,5 @@
             </div>
         </div>
     </div>
-    <!--<script src="{{ asset('javascript/ciphers/substitution/dictionary.js') }}"></script>-->
+    <script src="{{ asset('javascript/ciphers/transposition/simple.js') }}"></script>
 {% endblock %}
