--- a/application/templates/base.html.twig
+++ b/application/templates/base.html.twig
@@ -19,6 +19,7 @@
         <link rel="stylesheet" href="{{ asset('/assets/plugins/animation/css/animate.min.css') }}">
         <!-- vendor css -->
         <link rel="stylesheet" href="{{ asset('/assets/css/style.css') }}">
+        <link rel="stylesheet" href="{{ asset('/style/common.css') }}">
     {% endblock %}
 </head>
 <body>
