--- a/application/templates/ciphers/substitution.html.twig
+++ b/application/templates/ciphers/substitution.html.twig
@@ -1,65 +1,89 @@
 {% extends 'layout.html.twig' %}
 {% block page_contents %}
-    <div class="container-fluid">
-        <div class="row pt-5 alert alert-warning">
-            <div class="title"><h3 class="h3">Substitution</h3></div>
-            <div class="col-md-4">
-                <div class="card text-dark bg-light mb-3 border-dark">
-                    <div class="card-header">
-                        Cipher Text
-                    </div>
-                    <div class="card-body">
-                        <div class="mb-3">
-                            <textarea class="form-control textarea pb-2" id="text-cipher"
-                                      aria-describedby="text-cipher-Help" rows="10"></textarea>
-                            <div id="text-cipher-Help" class="form-text">Copy the text to check here</div>
-                        </div>
-                        <button type="button" id="text-cipher-btn" class="btn btn-primary">Check</button>
+    <!-- [ breadcrumb ] start -->
+    <div class="page-header">
+        <div class="page-block">
+            <div class="row align-items-center">
+                <div class="col-md-12">
+                    <div class="page-header-title">
+                        <h5 class="m-b-10 title-dark">SUBSTITUTION CIPHER</h5>
                     </div>
                 </div>
             </div>
-            <div class="col-md-8">
-                {% include 'partials/letterFrequency.html.twig' %}
-                <div class="card text-dark bg-light mb-3 border-dark">
-                    <div class="card-header">
-                        Results
-                    </div>
-                    <div class="card-body">
-                        <div class="mb-3">
-                            <div class="" id="longest-word-results-ta">
-                                <table id="words-table" class="table table-primary table-striped table-hover">
-                                    <thead>
-                                    <tr>
-                                        <th>Word</th>
-                                        <th>Length</th>
-                                        <th>Pattern</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody id="words-table-content">
-                                    </tbody>
-                                </table>
+        </div>
+    </div>
+    <div class="main-body">
+        <div class="page-wrapper">
+            <div class="row">
+                <div class="col-4">
+                    <div class="card rounded shadow bg-white border border-dark">
+                        <div class="card-header">Cipher Text</div>
+                        <div class="card-body">
+                            <div class="card-text">
+                            <textarea class="form-control textarea pb-2" id="text-cipher"
+                                      aria-describedby="text-cipher-Help" rows="10"></textarea>
+                                <div id="text-cipher-Help" class="form-text">Copy the text to check here</div>
+                            </div>
+                            <div class="card-footer">
+                                <button type="button" id="text-cipher-btn" class="btn btn-glow-primary btn-primary">
+                                    Check
+                                </button>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="card text-dark bg-light mb-3 border-dark">
-                    <div class="card-header">
-                        Dictionary Matches
+                <div class="col-md-8">
+                    <div class="row">
+                        <div class="col-12">
+                            {% include 'partials/letterFrequency.html.twig' %}
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <div class="mb-3">
-                            <div class="" id="matches-results-ta">
-                                <table id="matches-table" class="table table-success table-striped table-hover">
-                                    <thead>
-                                    <tr>
-                                        <th>Pattern</th>
-                                        <th>Dictionary Word</th>
-                                        <th>Substitution using dictionary word</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody id="matches-table-content">
-                                    </tbody>
-                                </table>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="card rounded shadow bg-white border border-dark">
+                                <div class="card-header">Results</div>
+                                <div class="card-body">
+                                    <div class="mb-3">
+                                        <div class="table-responsive" id="longest-word-results-ta">
+                                            <table id="words-table"
+                                                   class="display table nowrap table-striped table-hover" style="width:100%">
+                                                <thead>
+                                                <tr>
+                                                    <th>Word</th>
+                                                    <th>Length</th>
+                                                    <th>Pattern</th>
+                                                </tr>
+                                                </thead>
+                                                <tbody id="words-table-content">
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="card rounded shadow bg-white border border-dark">
+                                <div class="card-header">Dictionary Matches</div>
+                                <div class="card-body">
+                                        <div class="table-responsive" id="matches-results-ta">
+                                            <table id="matches-table"
+                                                   class="display table nowrap table-striped table-hover" style="width:100%">
+                                                <thead>
+                                                <tr>
+                                                    <th>Pattern</th>
+                                                    <th>Dictionary Word</th>
+                                                    <th>Substitution using
+                                                        dictionary word</th>
+                                                </tr>
+                                                </thead>
+                                                <tbody id="matches-table-content">
+                                                </tbody>
+                                            </table>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
