--- a/application/templates/partials/letterFrequency.html.twig
+++ b/application/templates/partials/letterFrequency.html.twig
@@ -1,5 +1,5 @@
 {% block lettersFrequency %}
-    <div class="card rounded shadow bg-white border border-dark">
+    <div class="card rounded shadow bg-white border border-dark" id="letter-frequency-block">
         <div class="card-header">Letters Frequency</div>
         <div class="card-body">
             <div class="card-text">
