--- a/application/templates/ciphers/caesar.html.twig
+++ b/application/templates/ciphers/caesar.html.twig
@@ -35,35 +35,42 @@
                     </div>
                 </div>
             </div>
-                    <div class="row">
-                        <div class="col-12">
-                            {% include 'partials/letterFrequency.html.twig' %}
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="card rounded shadow bg-white border border-dark">
-                                <div class="card-header">
-                                    <div class="row">
-                                        <div class="col-3">Result</div>
-                                        <div class="col-5"></div>
-                                        <div class="col-4 text-right">
-                                            <div class="input-group">
-                                            <input type="number" class="number form-control"
+            <div class="row">
+                <div class="col-12">
+                    {% include 'partials/letterFrequency.html.twig' %}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="card rounded shadow bg-white border border-dark">
+                        <div class="card-header">
+                            <div class="row">
+                                <div class="col-4">Result</div>
+                                <div class="col-6"></div>
+                                <div class="col-2 text-right">
+                                    <div class="input-group">
+                                        <div class="input-group">
+                                            <div class="input-group-prepend rounded-left">
+                                                <span class="input-group-text">Shift</span>
+                                            </div>
+                                            <input type="number" class="number form-control small"
                                                    min="-25"
                                                    max="25"
                                                    maxlength="4"
                                                    placeholder="Key"
                                                    id="caesar-key">
                                             <div class="input-group-append">
-                                                <button type="button" id="caesar-key-btn" class="btn btn-glow-primary btn-primary">Check</button>
-                                            </div>
+                                                <button type="button" id="caesar-key-btn"
+                                                        class="btn btn-glow-primary btn-primary rounded-right">Check
+                                                </button>
                                             </div>
                                         </div>
+                                    </div>
+                                </div>
                                 <div class="card-body">
                                     <div class="card-text">
-                            <textarea id="caesar-result" class="textarea form-control readonly
-                            disabled" rows="10" readonly></textarea>
+                                        <textarea id="caesar-result" class="textarea form-control readonly
+                                        disabled" rows="10" readonly></textarea>
                                     </div>
                                 </div>
                             </div>
