--- a/application/templates/ciphers/transposition.html.twig
+++ b/application/templates/ciphers/transposition.html.twig
@@ -1,27 +1,62 @@
 {% extends 'layout.html.twig' %}
 {% block page_contents %}
-    <div class="container-fluid">
-        <div class="row pt-5 alert alert-warning">
-            <div class="title"><h3 class="h3">Transposition</h3></div>
-            <div class="col-md-4">
-                <div class="card text-dark bg-light mb-3 border-dark">
-                    <div class="card-header">
-                        Cipher Text
-                    </div>
-                    <div class="card-body">
-                        <div class="mb-3">
-                            <textarea class="form-control textarea pb-2" id="text-cipher"
-                                      aria-describedby="text-cipher-Help" rows="10"></textarea>
-                            <div id="text-cipher-Help" class="form-text">Copy the text to check here</div>
-                        </div>
-                        <button type="button" id="text-cipher-btn" class="btn btn-primary">Check</button>
+    <!-- [ breadcrumb ] start -->
+    <div class="page-header">
+        <div class="page-block">
+            <div class="row align-items-center">
+                <div class="col-md-12">
+                    <div class="page-header-title">
+                        <h5 class="m-b-10 title-dark">TRANSPOSITION CIPHER</h5>
                     </div>
                 </div>
             </div>
-            <div class="col-md-8">
-                {% include 'partials/letterFrequency.html.twig' %}
+        </div>
+    </div>
+    <div class="main-body">
+        <div class="page-wrapper">
+            <div class="row">
+                <div class="col-4">
+                    <div class="card rounded shadow bg-white border border-dark">
+                        <div class="card-header">Cipher Text</div>
+                        <div class="card-body">
+                            <div class="card-text">
+                            <textarea class="form-control textarea pb-2" id="text-cipher"
+                                      aria-describedby="text-cipher-Help" rows="10"></textarea>
+                                <div id="text-cipher-Help" class="form-text">Copy the text to check here</div>
+                            </div>
+                            <div class="card-footer">
+                                <button type="button" id="text-cipher-btn" class="btn btn-glow-primary btn-primary">
+                                    Check
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div class="row">
+                        <div class="col-12">
+                            {% include 'partials/letterFrequency.html.twig' %}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="card rounded shadow bg-white border border-dark">
+                                <div class="card-header">Results</div>
+                                <div class="card-body">
+                                    <div class="table-responsive" id="matches-results-ta">
+                                        <table id="matches-table"
+                                               class="display table nowrap table-striped table-hover table"
+                                               style="width:100%">
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
     <script src="{{ asset('javascript/ciphers/transposition/simple.js') }}"></script>
+
 {% endblock %}
