--- a/application/templates/base.html.twig
+++ b/application/templates/base.html.twig
@@ -33,13 +33,13 @@
         <script src="{{ asset('/assets/js/vendor-all.min.js') }}"></script>
         <script src="{{ asset('/assets/plugins/bootstrap/js/bootstrap.min.js') }}"></script>
         <script src="{{ asset('/assets/js/pcoded.min.js') }}"></script>
+        <script src="https://unpkg.com/brain.js"></script>
     {% endblock %}
     {% block content %}{% endblock %}
 
     <script src="{{  asset('assets/js/horizontal-menu.js') }}"></script>
     <script src="{{  asset('javascript/common/layout.js') }}"></script>
     <script src="{{  asset('javascript/common/common.js') }}"></script>
-
 
     </script>
 {% endblock %}
