--- a/application/templates/ciphers/caesar.html.twig
+++ b/application/templates/ciphers/caesar.html.twig
@@ -82,4 +82,5 @@
     </div>
 
     <script src="{{ asset('javascript/ciphers/caesar/caesar.js') }}"></script>
+    <script src="{{ asset('javascript/ML/caesar.js') }}"></script>
 {% endblock %}
