--- a/application/templates/partials/letterFrequency.html.twig
+++ b/application/templates/partials/letterFrequency.html.twig
@@ -1,10 +1,7 @@
 {% block lettersFrequency %}
     <div class="card rounded shadow bg-white border border-dark" id="letter-frequency-block">
-        <div class="card-header">Letters Frequency</div>
         <div class="card-body">
-            <div class="card-text">
-                <div class="mb-3" id="letters-frequency-chart"></div>
-            </div>
+                <div id="letters-frequency-chart"></div>
         </div>
     </div>
     <script src="{{ asset('javascript/common/letters-frequency.js') }}"></script>
